Fix email address.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "authors": [
     {
       "name": "Miguel Ángel Graña",
-      "email": "miguel.mailbox@gmail.com.com"
+      "email": "miguel.mailbox@gmail.com"
     }
   ],
   "require": {
