Cahnge license from private to MIT.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "name": "retrinko/url-composer",
   "description": "Basic URL composer",
-  "license": "Private",
+  "type": "library",
+  "license": "MIT",
   "keywords": [
     "URL",
     "composer"
